# simple-game

./: .clang-format  .gitignore  CMakeHelper.cmake  CMakeLists.txt  pyproject.toml  run.py
src/: main.cpp
