[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "black>=25.1.0",
    "setuptools>=80.9.0",
    "typer>=0.17.4",
]

[tool.setuptools]
py-modules = ["run"]

[project.scripts]
run = "run:app"

